# py-ai

./: .env.example  Makefile  compose.local.yml
apps/ai/: .env.example  .gitignore  main.py  pyproject.toml
apps/ai/components/: heatmap.py
apps/ai/pages/: iris.py
apps/ai/services/iris/: dataset.py  repository.py
docker/ai/: Dockerfile
