[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["fumizaki"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = "^1.44.1"
python-dotenv = "^1.1.0"
pandas = "^2.2.3"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
matplotlib-inline = "^0.1.7"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
